--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,6 +10,12 @@
 </head>
 <body>
     <div id="weather-container" class="weather-container">
+        
+        <form id="search-form" class="search-form">
+            <input type="search" id="city-input" placeholder="Enter city name..." required>
+            <button type="submit">Search</button>
+        </form>
+
         <div class="main-info">
             <h1 id="city-name">Loading...</h1>
             <p id="current-temp">--°</p>
@@ -18,14 +25,12 @@
 
         <div class="card">
             <h2>Hourly Forecast</h2>
-            <div id="hourly-forecast" class="hourly-forecast">
-                </div>
+            <div id="hourly-forecast" class="hourly-forecast"></div>
         </div>
 
         <div class="card">
             <h2>10-Day Forecast</h2>
-            <div id="daily-forecast" class="daily-forecast">
-                </div>
+            <div id="daily-forecast" class="daily-forecast"></div>
         </div>
 
         <div class="details-grid">
@@ -55,5 +60,8 @@
             </div>
         </div>
     </div>
+    
+    <footer>created by vivek teotia❤️</footer>
+
 </body>
 </html>
